--- a/root/templates/comp/navbar.html
+++ b/root/templates/comp/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary py-2">
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg bg-body-tertiary py-2">
   <div class="container-fluid">
     <a href="/" class="d-flex align-items-center">
       <img src="{% static 'img/root/root-ico.png' %}" alt="Project Icon" width="40" height="40" class="me-2">
@@ -19,12 +19,14 @@
       {% if user.is_authenticated %}
 
         <div class = "nav-item dropdown d-flex align-items-center">
-            <img src = "{% static "img/root/profile/default-prof-pic.jpg" %}" alt="Profile Picture" class="rounded-circle me-2" style="width: 40px; height: 40px; object-fit: cover;">
+          {% if user.profile.first.pfp %}
+            <img src="{{ user.profile.first.pfp.url }}" alt="Profile Picture" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;">
+          {% endif %}
             <a class="nav-link dropdown-toggle text-secondary me-2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Hello, {{ user.first_name }}!
             </a>
           <ul class="dropdown-menu mt-3">
-            <li><a class="dropdown-item" href="#"><i class="bi bi-person-circle"></i> Profile</a></li>
+            <li><a class="dropdown-item" href="{% url 'profile' username=user.username %}"><i class="bi bi-person-circle"></i> Profile</a></li>
             <li>
               <form method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
