added simple class views

--- a/root/templates/comp/footer.html
+++ b/root/templates/comp/footer.html
@@ -12,7 +12,7 @@
         &copy; All rights reserved |<b> ROSEFLOURISH </b>| Sawada | 2025
       </p>
       <div class = "d-flex justify-content-center">
-        <img src="{% static 'img/root/root-ico.png' %}" alt="Project Icon" width="55" height="55" class="me-3">
+        <img src="{% static 'img/root/root-icon.png' %}" alt="Project Icon" width="55" height="55" class="me-3">
         <img src="{% static 'img/dj/django-ico.png' %}" alt="Django Icon" width="45" height="55" class="">
       </div>
     </footer>
