--- a/root/templates/comp/navbar.html
+++ b/root/templates/comp/navbar.html
@@ -14,16 +14,19 @@
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link" href="/"><i class="bi bi-house"></i> Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/courses/"><i class="bi bi-collection"></i> Courses</a></li>
       </ul>
 
       {% if user.is_authenticated %}
 
         <div class = "nav-item dropdown d-flex align-items-center">
+          <a href = "#" class = "text-secondary me-1"><i class="bi bi-cart4"></i></a>
+          <text class = "text-secondary me-3">{{ user.profile.first.cash }}$</text>
           {% if user.profile.first.pfp %}
             <img src="{{ user.profile.first.pfp.url }}" alt="Profile Picture" class="rounded-circle" style="width: 40px; height: 40px; object-fit: cover;">
           {% endif %}
-            <a class="nav-link dropdown-toggle text-secondary me-2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Hello, {{ user.first_name }}!
+            <a class="nav-link dropdown-toggle display-3 fs-5 text-secondary me-2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              {{ user.first_name }}
             </a>
           <ul class="dropdown-menu mt-3">
             <li><a class="dropdown-item" href="{% url 'profile' username=user.username %}"><i class="bi bi-person-circle"></i> Profile</a></li>
