added course filtration, course detail with module and lesson lists (task WIP) // using JavaScript, Ajax query

--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-    <title>ROSEFLOURISH - Course: {{course.name}}</title>
+    <title>ROSEFLOURISH - Course: {{course.name}} - Info</title>
 {% endblock title %}
 
 {% block content %}
