--- a/root/templates/comp/footer.html
+++ b/root/templates/comp/footer.html
@@ -1,19 +1,21 @@
 {% load static %}
 
 <div class="container">
-    <footer class="py-3 my-3">
+    <footer class="py-5 my-2">
       <hr class="my-3 border border-secondary">
-      <p class="text-center text-body-secondary fs-6 display-6">
+      <p class="text-left text-body-secondary fs-6 display-6">
         <a href = "#" class = "link-secondary" disabled>Privacy</a>
         <a href = "#" class = "link-secondary" disabled>About</a>
         <a href = "#" class = "link-secondary" disabled>Contact us</a>
       </p>
-      <p class="text-center text-body-secondary display-6 fs-5">
-        &copy; All rights reserved |<b> ROSEFLOURISH </b>| Sawada | 2025
+      <p class="text-left text-body-secondary display-6 fs-6">
+        <b>ROSEFLOURISH <small style="font-size: 12px" class = "text-secondary"> 250201w4</small></b> <br>
+        <small style="font-size: 14px">&copy; All rights reserved • Sawada
+        </small>
       </p>
-      <div class = "d-flex justify-content-center">
-        <img src="{% static 'img/root/root-icon.png' %}" alt="Project Icon" width="55" height="55" class="me-3">
-        <img src="{% static 'img/dj/django-ico.png' %}" alt="Django Icon" width="45" height="55" class="">
+      <div class = "d-flex justify-content-start">
+        <img src="{% static 'img/bs/bootstrap-ico.png' %}" alt="Bootstrap Icon" width="45" height="40" class="me-3" style="filter: grayscale(100%);">
+        <img src="{% static 'img/dj/django-ico.png' %}" alt="Django Icon" width="35" height="45" class="" style="filter: grayscale(100%);">
       </div>
     </footer>
   </div>
