--- a/root/templates/root/base.html
+++ b/root/templates/root/base.html
@@ -16,11 +16,21 @@
         {% block title %} {% endblock title %}
     </head>
     <body>
-        {% include "comp/navbar.html" %}
-
-        {% block content %} {% endblock content %}
-
-        {% include "comp/footer.html" %}
+        <div class="container-fluid overflow-hidden">
+            <div class="row w-auto fixed-top">
+                {% include "comp/navbar.html" %}
+            </div>
+        
+            <div class="row vh-100" style="padding-top: 56px;">
+                <div class="col-12 col-sm-3 col-xl-2 px-sm-0 px-0 d-flex fixed-left" style="position: fixed; top: 56px; bottom: 0;">
+                    {% include 'comp/sidebar.html' %}
+                </div>
+        
+                <div class="col d-flex flex-column" style="margin-left: 250px; height: calc(100vh - 56px); overflow-y: auto; overflow-x: hidden;">
+                    {% block content %} {% endblock %}
+                </div>
+            </div>
+        </div>              
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
