--- a/tasks/templates/tasks/task.html
+++ b/tasks/templates/tasks/task.html
@@ -17,13 +17,10 @@
             <div class = "card shadow-0 border" style="background-color: #f0f2f5;">
                 <div class = "card-body p-3">
                     {% for answer in answers %}
-                        {% if answer %}
                         <p><a class="small" href="{{ answer.media.url }}">{{ answer.media.url|truncatechars:10 }}</a></p>
-                        {% else %}
-                            No answers yet.
-                        {% endif %}
+                        {% empty %}
+                        <p>No answers yet.</p>
                     {% endfor %}
-
                     <form method="POST" enctype = "multipart/form-data" class="d-flex align-items-center">
                         {% csrf_token %}
                         <div class="flex-grow-1 mt-3">
@@ -51,26 +48,26 @@
             <div class = "card shadow-0 border" style="background-color: #f0f2f5;">
                 <div class = "card-body p-3">
                     <div class="overflow-auto" style="max-height: 400px;">
-                        {% for comment in comments %}
-                            <div class="card mb-2">
-                                <div class="card-body">
-                                    <div class="d-flex justify-content-between">
-                                        <p>{{comment.content}}</p>
-                                        {% if comment.media %}
-                                            <a class="small" href="{{ comment.media.url }}">{{ comment.media.url|truncatechars:10 }}</a>
-                                        {% endif %}
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-start">
-                                            <img class= "rounded-5" src="{{ comment.user.profile.first.pfp.url }}" alt="Profile Picture" width="32" height="32">
-
-                                        <p class="small mb-0 ms-2">{{comment.user.first_name}} {{comment.user.last_name}}</p>
-
-                                        <p class="small mb-0 ms-2 text-secondary">{{comment.created_at}}</p>                                  
-                                    </div>
+                    {% for comment in comments %}
+                        <div class="card mb-2">
+                            <div class="card-body">
+                                <div class="d-flex justify-content-between">
+                                    <p>{{ comment.content }}</p>
+                                    {% if comment.media %}
+                                        <a class="small" href="{{ comment.media.url }}">{{ comment.media.url|truncatechars:10 }}</a>
+                                    {% endif %}
+                                </div>
+                                <div class="d-flex align-items-center">
+                                    <img class="rounded-5" src="{{ comment.user.profile.first.pfp.url }}" 
+                                        alt="Profile Picture" width="32" height="32">
+                                    <p class="small mb-0 ms-2">{{ comment.user.first_name }} {{ comment.user.last_name }}</p>
+                                    <p class="small mb-0 ms-2 text-secondary">{{ comment.created_at }}</p>
                                 </div>
                             </div>
-                        {% endfor %}
-                    </div>
+                        </div>
+                        {% empty %}
+                        <p>No comments yet.</p>
+                    {% endfor %}
                     <form method="POST" enctype = "multipart/form-data" class="d-flex align-items-center">
                         {% csrf_token %}
                         <div class="flex-grow-1 mt-3">
