Admin features (NOT WORKING OMG OMG)

--- a/root/templates/comp/footer.html
+++ b/root/templates/comp/footer.html
@@ -1,15 +1,15 @@
 {% load static %}
 
 <div class="container">
-    <footer class="py-5 my-2">
-      <hr class="my-3 border border-secondary">
+    <footer>
+      <hr class="border border-secondary">
       <p class="text-left text-body-secondary fs-6 display-6">
         <a href = "#" class = "link-secondary" disabled>Privacy</a>
         <a href = "#" class = "link-secondary" disabled>About</a>
         <a href = "#" class = "link-secondary" disabled>Contact us</a>
       </p>
       <p class="text-left text-body-secondary display-6 fs-6">
-        <b>ROSEFLOURISH <small style="font-size: 12px" class = "text-secondary"> 250201w4</small></b> <br>
+        <b>ROSEFLOURISH <small style="font-size: 12px" class = "text-secondary"> 250211w6</small></b> <br>
         <small style="font-size: 14px">&copy; All rights reserved • Sawada
         </small>
       </p>
