--- a/root/templates/comp/footer.html
+++ b/root/templates/comp/footer.html
@@ -3,19 +3,12 @@
 <div class="container">
     <footer>
       <hr class="border border-secondary">
-      <p class="text-left text-body-secondary fs-6 display-6">
-        <a href = "#" class = "link-secondary" disabled>Privacy</a>
-        <a href = "#" class = "link-secondary" disabled>About</a>
-        <a href = "#" class = "link-secondary" disabled>Contact us</a>
-      </p>
       <p class="text-left text-body-secondary display-6 fs-6">
-        <b>ROSEFLOURISH <small style="font-size: 12px" class = "text-secondary"> 250211w6</small></b> <br>
-        <small style="font-size: 14px">&copy; All rights reserved • Sawada
+        <img src="{% static 'img/bs/bootstrap-ico.png' %}" alt="Bootstrap Icon" width="30" height="25" class="me-0" style="filter: grayscale(100%);">
+        <img src="{% static 'img/dj/django-ico.png' %}" alt="Django Icon" width="20" height="25" class="" style="filter: grayscale(100%);">
+        <b>ROSEFLOURISH</b> <br>
+        <small style="font-size: 14px">&copy; All rights reserved • Sawada • 250216w7 • Render Hosting
         </small>
       </p>
-      <div class = "d-flex justify-content-start">
-        <img src="{% static 'img/bs/bootstrap-ico.png' %}" alt="Bootstrap Icon" width="45" height="40" class="me-3" style="filter: grayscale(100%);">
-        <img src="{% static 'img/dj/django-ico.png' %}" alt="Django Icon" width="35" height="45" class="" style="filter: grayscale(100%);">
-      </div>
     </footer>
   </div>
